Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28550

improper handling of replication event group that contains Gtid_log_list_event

    XMLWordPrintable

Details

    Description

      It's legal to have Gtid_list_log_event inside a group. E.g
      {{Gtid_event, Gtid_log_list_event, ... }} is permitted.
      However, the slave IO thread treated both and Gtid_log_list_event specifically (see how to repeat)
      as the terminal even when the group represents a DDL query.
      That causes a premature Gtid state update so the slave IO would think
      the whole group has been collected while in fact ... the actual terminal events are yet to be seen and process.

      How to reproduce requires a 10.9 test:
      ./mtr rpl_mysqlbinlog_slave_consistency.test

      Attachments

        Activity

          People

            bnestere Brandon Nesterenko
            Elkin Andrei Elkin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d 1h
                2d 1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.